--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </section>
         <section class="task-list-wrapper">
             <h2 class="list-title">Tasks Completed</h2>
-            <ul class="task-list" id="completed-tasks"></ul>
+            <ul class="task-list" id="tasks-completed"></ul>
         </section> 
     </main>
 
